src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>SubChannel__c</fullName>
        <label>Sub Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Na</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletic Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Repair Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banquet Hall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty Salon/Barber Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer Specialty Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billiard/Bowling/Arcade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Books</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Wash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casino/Gambling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Nightclub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee/Tea Shop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concessionaire Na</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Cigarette Outlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Convenience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Mass Merchandiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conventional Wholesale Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correctional Facility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TequilaTier__c</fullName>
        <label>Tequila Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TerritoryTag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory (Tag)</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Distributor</relationshipLabel>
        <relationshipName>Distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <description>Account Territory.</description>
        <label>Territory Value</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Ny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montgomery County MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalDisplaysinStore__c</fullName>
        <label>Total Displays in Store</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalValueSegmentationTier__c</fullName>
        <label>Total Value Segmentation Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TradeChannel__c</fullName>
        <label>Trade Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Casinos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual &amp; Theme Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Bar &amp; Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual Bars &amp; Nightclubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Club &amp; Warehouse Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug Stores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Dining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Golf &amp; Yacht</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery, Mass Merchandised, Club &amp; Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Format Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Off-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Bars &amp; Nightclubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Format, Convenience, Urban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social, Fraternal &amp; Veteran Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stadium, Theater, Theme Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Determined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned Off-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned On-Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypesofDisplay__c</fullName>
        <label>Types of Display</label>
        <picklist>
            <picklistValues>
                <fullName>Bins</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>End Caps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor stackings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypicalDisplaySizeAllOther__c</fullName>
        <inlineHelpText>What is the typical display size for all other brands?
Large Brand = Jim Beam, Pinnacle, etc. 
Other Brand = Basil, Knob, etc</inlineHelpText>
        <label>Typical Display Size All Other</label>
        <picklist>
            <picklistValues>
                <fullName>Bin (1-3 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (3-8 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (8-20 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (20-40 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X Large (40-80 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumbo (80+ phys cs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypicalLargeBrandDisplaySize__c</fullName>
        <inlineHelpText>What is the typical large brand display size potential? 
Large Brand = Jim Beam, Pinnacle, etc. 
Other Brand = Basil, Knob, etc</inlineHelpText>
        <label>Typical Large Brand Display Size</label>
        <picklist>
            <picklistValues>
                <fullName>Bin (1-3 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (3-8 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (8-20 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large (20-40 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X Large (40-80 phys cs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jumbo (80+ phys cs)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VodkaTier__c</fullName>
        <label>Vodka Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WallSignage__c</fullName>
        <label>Wall Signage</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WarehouseID__c</fullName>
        <label>Warehouse ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well__c</fullName>
        <inlineHelpText>What type of well products does the Account have?</inlineHelpText>
        <label>Well</label>
        <picklist>
            <picklistValues>
                <fullName>Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WhiskeyTier__c</fullName>
        <label>Whiskey Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WindowDisplay__c</fullName>
        <inlineHelpText>Are window displays allowed?</inlineHelpText>
        <label>Window Display</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WindowDoorSignage__c</fullName>
        <inlineHelpText>Is window or door signage allowed?</inlineHelpText>
        <label>Window / Door Signage</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllCorporateAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CorporateAccount</value>
        </filters>
        <filters>
            <field>ActivelyManaged__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Corporate Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllDistributors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>DistributorMaster__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <label>All Distributors</label>
    </listViews>
    <listViews>
        <fullName>AllDistributors2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>DistributorMaster__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <filters>
            <field>Military__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>All Distributors-No</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllNonPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Premise</value>
        </filters>
        <label>All Non-Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllOffPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.OffPremise</value>
        </filters>
        <label>All Off Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllOnPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.OnPremise</value>
        </filters>
        <label>All On Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Distributors_Program_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>DistributorMaster__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <filters>
            <field>ProgramPartner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Distributors - Program Partners</label>
    </listViews>
    <listViews>
        <fullName>All_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Vendor</value>
        </filters>
        <label>All Vendors</label>
        <language>en_US</language>
        <sharedTo>
            <group>GBS_Employees_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCorporateAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.CorporateAccount</value>
        </filters>
        <label>My Corporate Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyDistributors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>DistributorMaster__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Distributor</value>
        </filters>
        <label>My Distributors</label>
    </listViews>
    <listViews>
        <fullName>MyNonPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Non_Premise</value>
        </filters>
        <label>My Non-Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyOffPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.OffPremise</value>
        </filters>
        <label>My Off Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyOnPremiseAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.OnPremise</value>
        </filters>
        <label>My On Premise Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreID__c</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>SubChannel__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>CorporateAccount</fullName>
        <active>true</active>
        <description>Used for Corporate Accounts.</description>
        <label>Corporate Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>Used for Distributors.</description>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Master</fullName>
        <active>true</active>
        <label>Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Premise</fullName>
        <active>true</active>
        <description>Used for Non-Premise Accounts.</description>
        <label>Non-Premise</label>
    </recordTypes>
    <recordTypes>
        <fullName>OffPremise</fullName>
        <active>true</active>
        <description>Used for Off Premise Accounts.</description>
        <label>Off Premise</label>
    </recordTypes>
    <recordTypes>
        <fullName>OnPremise</fullName>
        <active>true</active>
        <description>Used for On Premise Accounts.</description>
        <label>On Premise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <description>Vendor Accounts</description>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AccountNameEditing</fullName>
        <active>true</active>
        <description>Account Names can only be edited by the System Admin Profile. This will ensure that Account Names are only updated through the integration and not by any Sales 360 users without a System Admin Profile.</description>
        <errorConditionFormula>ISCHANGED(Name)&amp;&amp; 
NOT(OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;System Administrator with Bulk Hard Delete&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name cannot be edited as Account Name is controlled by Aperity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoPreviousStoreIdOnInsert</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISNEW() ,
  NOT(ISBLANK(PreviousStoreID__c)),
  NOT(ISNULL(PreviousStoreID__c)),
  NOT(AccountAction__c=3)
)</errorConditionFormula>
        <errorMessage>Previous StoreID should be blank on insert</errorMessage>
    </validationRules>
</CustomObject>